--- a/Slovak/main/MiSound.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiSound.apk/res/values-sk/strings.xml
@@ -274,7 +274,7 @@
     <string name="second_note">Nasaďte si slúchadlá.</string>
     <string name="see_details">Podrobnosti</string>
     <string name="sound_assist_key_summary">Prispôsobiť zvuk pre jednotlivé aplikácie počas prehrávania zvuku z viacerých zdrojov</string>
-    <string name="sound_assist_key_title">Prispôsobiť zvuk médií vo viacerých aplikáciach</string>
+    <string name="sound_assist_key_title">Prispôsobiť zvuk médií vo viacerých aplikáciách</string>
     <string name="sound_assist_title">Zvukový asistent</string>
     <string name="sound_effect_hall">Hall</string>
     <string name="sound_effect_original">Originál</string>
