--- a/Slovak/main/AuthManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/AuthManager.apk/res/values-sk/strings.xml
@@ -72,8 +72,8 @@
     <string name="HIPS_Group_ROOT">"ROOT "</string>
     <string name="HIPS_Perm_Access_Gallery">Prístup ku Galérii</string>
     <string name="HIPS_Perm_Access_Gallery_Desc">Povoliť tejto aplikácii prístup k vašej Galérii</string>
-    <string name="HIPS_Perm_AdjustRingerVolume">upraviť hlasitosť zvonenia</string>
-    <string name="HIPS_Perm_AdjustVolumeInCall">upraviť hlasitosť hovoru</string>
+    <string name="HIPS_Perm_AdjustRingerVolume">Upraviť hlasitosť zvonenia</string>
+    <string name="HIPS_Perm_AdjustVolumeInCall">Upraviť hlasitosť hovoru</string>
     <string name="HIPS_Perm_AllowAll">Povoliť všetko</string>
     <string name="HIPS_Perm_AnswerCall">Prijať prichádzajúci hovor</string>
     <string name="HIPS_Perm_AudioRecorder">Nahrávanie zvuku</string>
@@ -140,11 +140,11 @@
     <string name="HIPS_Perm_Location_Desc">Zistí polohu pomocou GPS alebo GSM siete</string>
     <string name="HIPS_Perm_Location_Hint">%1$s aplikácií má povolenie k získaniu polohy telefónu</string>
     <string name="HIPS_Perm_Location_Monitor">Sledovať Vašu pozíciu</string>
-    <string name="HIPS_Perm_Location_Source_Cellular">sledovať polohu podľa mobilnej siete</string>
-    <string name="HIPS_Perm_Location_Source_GPS">sledovať polohu podľa GPS</string>
-    <string name="HIPS_Perm_Location_Source_Network">sledovať polohu podľa siete</string>
+    <string name="HIPS_Perm_Location_Source_Cellular">Sledovať polohu podľa mobilnej siete</string>
+    <string name="HIPS_Perm_Location_Source_GPS">Sledovať polohu podľa GPS</string>
+    <string name="HIPS_Perm_Location_Source_Network">Sledovať polohu podľa siete</string>
     <string name="HIPS_Perm_MMS">MMS</string>
-    <string name="HIPS_Perm_MMS_Access">čítať MMS</string>
+    <string name="HIPS_Perm_MMS_Access">Čítať MMS</string>
     <string name="HIPS_Perm_MMS_Desc">Prístup k prijatým MMS</string>
     <string name="HIPS_Perm_MMS_Hint">%1$s môže pristupovať k prijatým MMS</string>
     <string name="HIPS_Perm_MobileNetwork">Mobilné dáta</string>
@@ -181,16 +181,16 @@
     <string name="HIPS_Perm_ROOT_Hint">%1$s apl. má ROOT práva</string>
     <string name="HIPS_Perm_ROOT_Title">Získať práva ROOT</string>
     <string name="HIPS_Perm_Read_Call_Log">Čítať zoznam hovorov</string>
-    <string name="HIPS_Perm_Read_Call_Log_Desc">čítať váš zoznam hovorov</string>
+    <string name="HIPS_Perm_Read_Call_Log_Desc">Čítať váš zoznam hovorov</string>
     <string name="HIPS_Perm_Read_Call_Log_Hint">%1$s apl. má prístup k zoznamu hovorov</string>
     <string name="HIPS_Perm_Read_Contact">Čítať kontakty</string>
-    <string name="HIPS_Perm_Read_Contact_Desc">čítať vaše kontakty</string>
+    <string name="HIPS_Perm_Read_Contact_Desc">Čítať vaše kontakty</string>
     <string name="HIPS_Perm_Read_Contact_Hint">%1$s apl. má prístup k vašim kontaktom</string>
     <string name="HIPS_Perm_Read_MMS">Čítať MMS správy</string>
-    <string name="HIPS_Perm_Read_MMS_Desc">čítať vaše  MMS správy</string>
+    <string name="HIPS_Perm_Read_MMS_Desc">Čítať vaše  MMS správy</string>
     <string name="HIPS_Perm_Read_MMS_Hint">%1$s apl. má prístup k vašim MMS správam</string>
     <string name="HIPS_Perm_Read_SMS">Čítať SMS správy</string>
-    <string name="HIPS_Perm_Read_SMS_Desc">čítať vaše SMS správy</string>
+    <string name="HIPS_Perm_Read_SMS_Desc">Čítať vaše SMS správy</string>
     <string name="HIPS_Perm_Read_SMS_Hint">%1$s apl. má prístup k vašim SMS správam</string>
     <string name="HIPS_Perm_Recorder_Audio">Nahrávať zvuk</string>
     <string name="HIPS_Perm_Recorder_AudioVideo">Nahrávať zvuk a video</string>
@@ -238,7 +238,7 @@
     <string name="HIPS_Perm_Wakelock_Desc">Má právo zabrániť spánku zariadenia</string>
     <string name="HIPS_Perm_Wakelock_Hint">%1$s má právo zabrániť spánku zariadenia</string>
     <string name="HIPS_Perm_Xiaomi_Account">Mi účet</string>
-    <string name="HIPS_Perm_Xiaomi_Account_Desc">prístup k vášmu Mi účtu</string>
+    <string name="HIPS_Perm_Xiaomi_Account_Desc">Prístup k vášmu Mi účtu</string>
     <string name="HIPS_Perm_Xiaomi_Account_Hint">%1$s apl. má prístup k vášmu Mi účtu</string>
     <string name="HIPS_Perm_add_voicemail">Hlasové správy</string>
     <string name="HIPS_Perm_add_voicemail_Desc">Pridať hlasové správy</string>
@@ -249,11 +249,11 @@
     <string name="HIPS_Perm_deamon_notification">Permanentné upozornenie</string>
     <string name="HIPS_Perm_deamon_notification_Desc">Zobraziť permanentné upozornenie</string>
     <string name="HIPS_Perm_get_accounts">Prístup k účtom v zariadení</string>
-    <string name="HIPS_Perm_get_accounts_Desc">Prístup k všetkým účtom uloženým v zariadení</string>
+    <string name="HIPS_Perm_get_accounts_Desc">Prístup ku všetkým účtom uloženým v zariadení</string>
     <string name="HIPS_Perm_get_installed_apps">Získať informácie o nainštalovaných aplikáciách</string>
-    <string name="HIPS_Perm_get_installed_apps_Desc">získať informácie o nainštalovaných aplikáciách v tomto zariadení</string>
+    <string name="HIPS_Perm_get_installed_apps_Desc">Získať informácie o nainštalovaných aplikáciách v tomto zariadení</string>
     <string name="HIPS_Perm_get_tasks">Dostať úlohy</string>
-    <string name="HIPS_Perm_get_tasks_Desc">dostať úlohy</string>
+    <string name="HIPS_Perm_get_tasks_Desc">Dostať úlohy</string>
     <string name="HIPS_Perm_install_shortcut">Odkazy na domácej ploche</string>
     <string name="HIPS_Perm_install_shortcut_Desc">Pridať odkaz na domácu plochu</string>
     <string name="HIPS_Perm_mediaVolume">Upraviť hlasitosť médií</string>
@@ -295,7 +295,7 @@
     <string name="HIPS_SecurityPrompt_ROOT_Step5">Používajte opatrne!</string>
     <string name="HIPS_SecurityPrompt_ROOT_Step6">Skutočne chcete povoliť aplikácii %1$s získať práva ROOT?</string>
     <string name="HIPS_SecurityPrompt_Reject">Zakázať (%d)</string>
-    <string name="HIPS_SecurityPrompt_Reject_Clear_This">zakázať a vymazať schránku (%d)</string>
+    <string name="HIPS_SecurityPrompt_Reject_Clear_This">Zakázať a vymazať schránku (%d)</string>
     <string name="HIPS_SecurityPrompt_Reject_Never">Zakázať a viac sa nepýtať (%d)</string>
     <string name="HIPS_SecurityPrompt_Reject_Once">Zakázať raz (%d)</string>
     <string name="HIPS_SecurityPrompt_Reject_This">Zakázať raz (%d)</string>
@@ -373,9 +373,9 @@
     <string name="grant_dialog_button_deny_and_dont_ask_again">Zakázať a nepýtať sa</string>
     <string name="grant_dialog_button_deny_background">Ponechať prístup počas používania</string>
     <string name="grant_dialog_button_deny_background_and_dont_ask_again">Len počas používania aplikácie</string>
-    <string name="grant_dialog_storage_category_title">Táto aplikácia vyžaduje povolenia pre prístup ku Galérii a správam v sociálnych aplikáciach</string>
+    <string name="grant_dialog_storage_category_title">Táto aplikácia vyžaduje povolenia pre prístup ku Galérii a správam v sociálnych aplikáciách</string>
     <string name="grant_dialog_storage_gallery_title">Galéria</string>
-    <string name="grant_dialog_storage_sociality_title">Správy v sociálnych aplikáciach</string>
+    <string name="grant_dialog_storage_sociality_title">Správy v sociálnych aplikáciách</string>
     <string name="keep_blur_location">Ponechať</string>
     <string name="keep_notice_me">Upozorniť ma</string>
     <string name="location_settings">Nastavenie polohy</string>
@@ -507,7 +507,7 @@
     <string name="storage_policy_notify_both_title">%1$s nemá povolenie pre prístup ku Galérii</string>
     <string name="storage_policy_notify_content">Dotykom upravíte povolenia</string>
     <string name="storage_policy_notify_gallery_title">%1$s nemá povolenie pre prístup ku Galérii</string>
-    <string name="storage_policy_notify_sociality_title">%1$s nemá prístup ku správam v sociálnych aplikáciach</string>
+    <string name="storage_policy_notify_sociality_title">%1$s nemá prístup ku správam v sociálnych aplikáciách</string>
     <string name="storage_policy_notify_title">%1$s nemá prístup ku Galérii</string>
     <string name="sunday">Nedeľa</string>
     <string name="sunday_short">Ned</string>
